# rust-zero2prod

./: Cargo.toml  README.md
.github/workflows/: general.yml
migrations/: 20260413075416_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
